fix(cors): Allow all origins when APP_CORS_ALLOWED_ORIGINS is not set
Fix 403 Forbidden error for static assets when Origin header is present.
If allowedOrigins is empty, allow all origins (*) for flexibility.

🤖 Generated with [Qoder](https://qoder.com)